# dotfiles

./: .bashrc  .chezmoi.toml.tmpl  .chezmoiexternal.yml  .chezmoiroot  .dockerignore  .editorconfig  .env.example  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.yaml  .profile  .releaserc.json  .stow-local-ignore  .tmux.conf  .zsh_profile  .zshenv  .zshrc  CHANGELOG.md  CLAUDE.md  Containerfile  Dockerfile  Dockerfile.base  Dockerfile.ubuntu  LICENSE  LOGS  README.md  Taskfile.yml  ansible.cfg  bootstrap.yml  build  cliff.toml  compose.yml  ctags  debian  dircolors  docker-compose.yml  dot_Xdefaults  dot_gitconfig  (+30 more)
.changeset/: bright-jokes-press.md  chilled-experts-retire.md  config.json  dry-beans-smell.md  fast-gifts-applaud.md  gold-poets-fail.md  hip-walls-count.md  hungry-turkeys-try.md  warm-schools-hug.md
bash/: Dotfile.yaml  bash_profile  bashrc
bun/: Dotfile.yaml
claude/: Dotfile.yaml
clone/: Dotfile.yaml
codex/: Dotfile.yaml
common-shell/: Dotfile.yaml  profile
config/: ghci  gitconfig  pryrc  spacemacs  vimperatorrc  vimrc  xinitrc  zlogin  zpreztorc  zprofile  zshenv  zshrc
defaults/: main.yml
docs/: CHANGELOG.md  keg
dotfiles/: spacemacs
dots/: .bashrc  .profile  .tmux.conf  .zshrc
dots-config/: Dotfile.yaml  config.yaml
editor/: Dotfile.yaml
emacs.d/: .gitignore  configuration.el  configuration.org  init.el  markdown-preview-template.html
files/: deno-install.sh  dot_gitconfig  dot_vimrc
git/: .gitconfig  Dotfile.yaml  ignore  setup
go/: Dotfile.yaml  env
home/: .bashrc  .chezmoi.toml.tmpl  .zshrc  (+32 more)
(+651 files in other folders)
