[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Jared Rickert <jaredrickert52@gmail.com>"]
packages = [{ include = "pac", from = "src" }]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
cleo = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pac = "pac.application:main"
